[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Keys/Not used/L-Key.png" type="Texture" id=1]
[ext_resource path="res://assets/Keys/A-Key.png" type="Texture" id=2]
[ext_resource path="res://src/UI/Key_move.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/DisposableDroidBB.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Key__move" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.56721, -4.33125 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "Animate"
playing = true
centered = false

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -4.56721, -4.33125 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
animation = "Animate"
playing = true
centered = false
offset = Vector2( 40, 0 )

[node name="ScreenTime" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="FadeOut" type="Timer" parent="."]
wait_time = 0.15

[node name="Label" type="Label" parent="."]
margin_left = -5.77059
margin_top = -17.1024
margin_right = 34.2294
margin_bottom = -1.10237
custom_fonts/font = SubResource( 7 )
text = "Move"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ScreenTime" to="." method="_on_ScreenTime_timeout"]
[connection signal="timeout" from="FadeOut" to="." method="_on_FadeOut_timeout"]
